[workspace]
members = ["block_collider", "bouncing_ball"]
resolver = "2"

[workspace.dependencies]
bevy = { version = "0.18.1", features = ["dynamic_linking"] }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
